# verbose-octomation-platform

./: .gitignore  ConfigPowerShell.ini  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
docs/exemplos/: Cliente.py  agendador.py  cli.py  log.py  servidor.py  soma.py
docs/exemplos/html/: exemplo.py
docs/exemplos/html/data/: index.html  relatorio.html
src/: verbose-octomation-platform.py
src/RPA/converter_textos_caixa_alta_baixa/: README.md
src/RPA/extrair_links_html/: README.md
src/RPA/organizar_downloads_por_pasta/: README.md
src/RPA/renomear_arquivos_em_lote/: README.md  renomear_arquivos_em_lote.py
src/RPA/renomear_arquivos_em_lote/config/: rename_rules.json
src/RPA/temporizador_com_notificacao_sonora/: README.md
src/config/: config.py  logger_utils.py
src/shared/: __init__.py  shared_config.py
src/system/config/: __init__.py  config_file.py  logging.ini
src/system/utils/: __init__.py  logger_utils.py  string_utils.py  toolkit.py
