[project]
name = "verbose-octomation-platform"
version = "0.1.0"
description = "Uma plataforma para gerenciar softwares RPA com registros e relatórios detalhados."
authors = [
    {name = "Allan de Oliveira Almeida", email = "arumeidaaran@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.blue]
line-length = 79
force-exclude = '''
    /(\.direnv|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|venv|venv312|\.svn|_build|buck-out|build|dist)/
'''

[tool.ruff]
line-length = 79
extend-exclude = ["venv", "venv312"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.isort]
profile = "django"
line_length = 79
skip = ["__pypackages__", ".venv", "venv", "venv312"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
